# samples

./: .pydevproject  LICENSE  README.md
arm_asm/: test.cpp
boost_python/: Makefile  test.cpp  test.py
ceres-solver_comparison/: CMakeLists.txt
ceres-solver_openmp/: CMakeLists.txt
ceres-solver_openmp/src/: test_ceres.cpp
cgp/: cgp.py  test1.py  test2.py
cpp_tensor_access/: CMakeLists.txt  compare_tensor_access.cpp
cpp_time_measurement/: CMakeLists.txt  time_test.cpp
denoise_simple_ae/: denoise_simple_ae.py
emacs_init/: init.el
gym_cartpole/: gym_cartpole.py  gym_cartpole_ddqn.py  gym_cartpole_dqn.py
gym_slimevolley/: basic_usage.py
iverilog_gtkwave/: lut2.v  run.sh  test_lut2.v
monty_hall/: monty_hall.py
opencv_CommandLineParser/: CMakeLists.txt  README.md
opencv_DenseOpticalFlow/: README.md
opencv_VideoCapture/: CMakeLists.txt
opencv_Viz/: CMakeLists.txt  README.md
opencv_Viz/src/: opencv_Viz.cpp
opencv_Viz2/: CMakeLists.txt  README.md
opencv_Viz2/src/: opencv_Viz2.cpp
opencv_python_cvtcolor/: opencv_python_cvtcolor.py
opencv_python_resize/: opencv_python_resize.py
python_binary_file/: Makefile  binary_proc.cpp  binary_read.py  binary_write.py
python_concurrent_futures/: test_concurrent_futures.py
python_image_fft/: image_source.txt  python_image_fft.py
python_image_filter/: python_image_filter.py
python_interactive/: interactive_console.py
python_jit/: python_jit_sample.py
python_opencv_cam/: python_opencv_cam.py
python_pptx/: python_pptx.py
pytorch_cifar10_tutorial/: pytorch_cifar10_tutorial.py
raspi_python_picamera/: raspi_python_picamera.py
raspi_python_tflite/: download.sh  raspi_python_tflite.py
reinforce_maze/: reinforce_maze.py
scikit_learn_dataset/: scikit_learn_dataset.py
scipy_hierarchy/: scipy_hierarchy.py
scipy_optimize/: scipy_const_min.py  scipy_leastsq.py  scipy_optimize.py
sh_argparse/: sh_argparse.sh
tensorboard/: basic_sample.py  hparam_tuning.py
tensorflow1_batch_normalization/: run.py
tensorflow2_speech_command/: input_data.py
tensorflow_convolution_details/: test.py
tensorflow_custom_convolution/: requirements.txt  tensorflow_custom_convolution.py
tensorflow_datasets_trial/: tensorflow_datasets_trial.py
tensorflow_eager_execution/: requirements.txt  tensorflow_eager_execution.py
tensorflow_gan_tutorial/: .gitignore  tensorflow_gan_tutorial.py
tensorflow_gather/: tensorflow_gather.py
tensorflow_keras_augmentation/: show_augmented_data.py  tensorflow_keras_augmentation.py
tensorflow_keras_checkpoint/: test.py
tensorflow_keras_custom_layer/: .gitignore  tensorflow_keras_custom_layer.py
tensorflow_keras_datasets/: tensorflow_keras_datasets.py
tensorflow_line_fitting/: tensorflow_line_fitting.py
tensorflow_max_pool_same/: test.py
tensorflow_padding/: my_layers.py  requirements.txt  tensorflow_padding.py
tensorflow_pretrained/: tensorflow_pretrained.py
(+25 files in other folders)
